--- a/app/views/menu.pug
+++ b/app/views/menu.pug
@@ -11,7 +11,7 @@ block content
         div.col.col-sm-12.col-md-4.d-flex.justify-content-center.mb-4
           a(href="/create").btn.btn-secondary.p-5.text-decoration-none Create Movies
         div.col.col-sm-12.col-md-4.d-flex.justify-content-center.mb-4
-          a(href="/search").btn.btn-secondary.p-5.text-decoration-none Search Movies
+          a(href="/movies").btn.btn-secondary.p-5.text-decoration-none Search Movies
         div.col.col-sm-12.col-md-4.d-flex.justify-content-center.mb-4
           a(href="/users").btn.btn-secondary.p-5.text-decoration-none Manage Users
 
