--- a/app/public/styles/base/_index.scss
+++ b/app/public/styles/base/_index.scss
@@ -1,20 +1,22 @@
 @import 'typography';
 
-.categories, .topics, .products {
-    display: grid;
-  
-    grid-template-columns: repeat(auto-fit, minmax(240px,1fr));
-    column-gap: 3rem;
-    row-gap: 2rem;
-    justify-items: center;
-    
-    picture {
-      width: 100%;
-      height: 7rem;
-      text-align: center;
-      & img {
-        max-height: 100%;
-        max-width: 100%;
-      }
-    }
-  }
+.categories,
+.topics,
+.products {
+	display: grid;
+
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	column-gap: 3rem;
+	row-gap: 2rem;
+	justify-items: center;
+
+	picture {
+		width: 100%;
+		height: 7rem;
+		text-align: center;
+		& img {
+			max-height: 100%;
+			max-width: 100%;
+		}
+	}
+}
