--- a/app/views/templates/container.pug
+++ b/app/views/templates/container.pug
@@ -3,3 +3,7 @@ body.container-fluid.p-0.d-flex.flex-column.min-vh-100
   .container
     include ../includes/navbar-primary.pug
     block content
+    script(src="/main-bundle.js")
+    script (src="https://code.jquery.com/jquery-3.2.1.slim.min.js")
+    script (src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js")
+    script (src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js")
