--- a/app/views/userForm.pug
+++ b/app/views/userForm.pug
@@ -2,27 +2,65 @@ extends ./templates/container.pug
 block content
   section.hero
       p.hero__text.m-0 
-        | #{user ? "Update" : "Create"} User
-  section.container.w-md-25.form-group
-    form.row.g-3(action= (user ? `/users/edit/${user.id}`: "/users/create") method="POST")
+        | #{editedUser ? "Update" : "Create"} User
+  section.container.w-md-50.form-group
+    form.row.g-3(action= "/users" method=(editedUser ? "PUT" : "POST"))
+      input(type="hidden" id="userid" value=editedUser._id)
       .col-12
         label(for="username", class="form-label") User Name
-        input(type="text" name="username" value= (user ? `${user.username}`:'')).form-control#username
-      if(!user)
-        .col-12
-          label(for="password", class="form-label") Password
-          input(type="password" name="password" value=(user?user.password:'')).form-control#transactions
-          
+        input(type="text" name="username" disabled= !!editedUser value= (editedUser ? `${editedUser.username}`:'')).form-control#username
       .col-12
-        label(for="tranactions", class="form-label") Transactions
-        input(type="text" name="transactions" value=(user?user.transactions:'')).form-control#transactions
+        label(for="firstName", class="form-label") First Name
+        input(type="text" name="firstName" value= (editedUser ? `${editedUser.firstName}`:'')).form-control#firstName
       .col-12
+        label(for="lastName", class="form-label") Last Name
+        input(type="text" name="lastName" value= (editedUser ? `${editedUser.lastName}`:'')).form-control#lastName
+      .col-12
+        label(for="sessionTimeOut", class="form-label") Session Time Out
+        input(type="text" name="sessionTimeOut" value= (editedUser ? `${editedUser.sessionTimeOut}`:'')).form-control#sessionTimeOut
+      .col-12
+        .row.g-3
+          .col-6
+            .form-check
+              input.form-check-input(type="checkbox" id="viewMovies" name="permissions" value="viewMovies" checked=((editedUser && editedUser.permissions.includes('viewMovies')) ? 'checked':undefined))
+              label.form-check-label(for="viewMovies")
+                | View Movies
+            .form-check
+              input.form-check-input(type="checkbox" id="createMovies" name="permissions" value="createMovies" checked=((editedUser && editedUser.permissions.includes('createMovies')) ? 'checked':undefined))
+              label.form-check-label(for="createMovies")
+                | Create Movies
+            .form-check
+              input.form-check-input(type="checkbox" id="deleteMovies" name="permissions" value="deleteMovies" checked=((editedUser && editedUser.permissions.includes('deleteMovies')) ? 'checked':undefined))
+              label.form-check-label(for="deleteMovies")
+                | Delete Movies
+            .form-check
+              input.form-check-input(type="checkbox" id="updateMovies" name="permissions" value="updateMovies" checked=((editedUser && editedUser.permissions.includes('updateMovies')) ? 'checked':undefined))
+              label.form-check-label(for="updateMovies")
+                | Update Movies
+          .col-6
+            .form-check
+              input.form-check-input(type="checkbox" id="viewSubscriptions" name="permissions" value="viewSubscriptions" checked=((editedUser && editedUser.permissions.includes('viewSubscriptions')) ? 'checked':undefined))
+              label.form-check-label(for="viewSubscriptions")
+                | View Subscriptions
+            .form-check
+              input.form-check-input(type="checkbox" id="createSubscriptions" name="permissions" value="createSubscriptions" checked=((editedUser && editedUser.permissions.includes('createSubscriptions')) ? 'checked':undefined))
+              label.form-check-label(for="createSubscriptions")
+                | Create Subscriptions
+            .form-check
+              input.form-check-input(type="checkbox" id="deleteSubscriptions" name="permissions" value="deleteSubscriptions" checked=((editedUser && editedUser.permissions.includes('deleteSubscriptions')) ? 'checked':undefined))
+              label.form-check-label(for="deleteSubscriptions")
+                | Delete Subscriptions
+            .form-check
+              input.form-check-input(type="checkbox" id="updateSubscriptions" name="permissions" value="updateSubscriptions" checked=((editedUser && editedUser.permissions.includes('updateSubscriptions')) ? 'checked':undefined))
+              label.form-check-label(for="updateSubscriptions")
+                | Update Subscriptions
+      .col-12      
         .form-check
-          input.form-check-input(type="checkbox" id="isAdmin" name="isAdmin" checked=((user && user.isAdmin)=='on'?'checked':undefined))
+          input.form-check-input(type="checkbox" id="isAdmin" name="permissions" value="isAdmin" checked=((editedUser && editedUser.permissions.includes('isAdmin')) ? 'checked':undefined))
           label.form-check-label(for="isAdmin")
             | Admin      
       .col-12
-        button(type="submit").btn.btn-secondary= (user? `Update`:`Create`)
+        button#updateUser.btn.btn-secondary= (editedUser? `Update`:`Create`)
       
 
   include ./includes/footer.pug
