Completed all member views

--- a/app/views/includes/movies-nav.pug
+++ b/app/views/includes/movies-nav.pug
@@ -1,8 +1,8 @@
 ul.nav
   li.nav-item
-    a.nav-link#allMovies All Movies
+    a(href="/movies").nav-link#allMovies All Movies
   li.nav-item
-    .nav-link#addMovie Add Movie
+    a(href="/movies/create").nav-link#addMovie Add Movie
   li.nav-item.mr-auto
     form.form-inline.my-2.my-lg-0(action="")
       button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Find Movie
