--- a/app/views/menu.pug
+++ b/app/views/menu.pug
@@ -9,11 +9,11 @@ block content
     section.container.actions
       div.row.menu
         div.col.col-sm-12.col-md-4.d-flex.justify-content-center.mb-4
-          a(href="/create").btn.btn-secondary.p-5.text-decoration-none Create Movies
+          a(href="/members").btn.btn-secondary.p-5.text-decoration-none Members
         div.col.col-sm-12.col-md-4.d-flex.justify-content-center.mb-4
-          a(href="/movies").btn.btn-secondary.p-5.text-decoration-none Search Movies
+          a(href="/movies").btn.btn-secondary.p-5.text-decoration-none Movies
         div.col.col-sm-12.col-md-4.d-flex.justify-content-center.mb-4
-          a(href="/users").btn.btn-secondary.p-5.text-decoration-none Manage Users
+          a(href="/users").btn.btn-secondary.p-5.text-decoration-none Users
 
   include ./includes/footer.pug 
 
