--- a/app/views/members.pug
+++ b/app/views/members.pug
@@ -14,15 +14,29 @@ block content
         .col.col-6.d-flex.justify-content-center
           .card(style="width: 25rem").mb-5
             .card-body
-              h5.card-title.mb-2 #{member.name}
-              p Email: #{member.email}
-              p City: #{member.city}
+              h5.card-title.mb-2.font-weight-bold #{member.name}
+              p.card-text 
+                span.font-weight-bold.mr-2 Email: 
+                span #{member.email}
+              p.card-text 
+                span.font-weight-bold.mr-2 City:
+                span #{member.city}
+              .container-fluid.p-0.mb-4
+                a(href=`members/${member._id}`).btn.btn-outline-primary.mr-2 Edit
+                a(href=`members/delete/${member._id}`).btn.btn-outline-secondary Delete
 
-              a(href=`members/${member._id}`).btn.btn-primary.mr-2 Edit
-              a(href=`members/delete/${member._id}`).btn.btn-primary Delete
-
-              div
-                .card-title Movies Watched
+              .container-fluid.p-0
+                h6.card-title.mb-2.font-weight-bold Recent Subscriptions
                 
+                div(style="height: 5rem").mb-3
+                  if(member.subscriptions.length)
+                    include ./includes/member-subscriptions
+                  else
+                    p This member has no subscriptions yet
+                button.btn.btn-primary.dropdown-toggle.mb-2(
+                  role="showSubscriptionForm" 
+                  data-memberId=member._id) 
+                    | Subscribe to new movie
+                include ./includes/subscription-form                
 
   include ./includes/footer.pug
