--- a/app/views/includes/movies-nav.pug
+++ b/app/views/includes/movies-nav.pug
@@ -1,9 +1,10 @@
-ul.nav
-  li.nav-item
-    a(href="/movies").nav-link#allMovies All Movies
-  li.nav-item
-    a(href="/movies/create").nav-link#addMovie Add Movie
-  li.nav-item.mr-auto
-    form.form-inline.my-2.my-lg-0(action="")
-      button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Find Movie
-      input.form-control.mr-sm-2(type="search" placeholder="Search" aria-label="Search")
+.container
+   ul.nav
+    li.nav-item
+      a(href="/movies").nav-link#allMovies All Movies
+    li.nav-item
+      a(href="/movies/create").nav-link#addMovie Add Movie
+    li.nav-item(style="margin-left: auto")
+      form.form-inline.my-2.my-lg-0.d-flex(action="/movies", method="GET")
+        button.btn.btn-outline-success.mr-2.my-sm-0.d-block(type="submit") Find Movie
+        input(type="search" placeholder="Part of movie name" aria-label="Search" name="name")
