--- a/app/views/includes/subscription-form.pug
+++ b/app/views/includes/subscription-form.pug
@@ -1,14 +1,16 @@
 div.mb-2(style="display: none")
   h6.card-title.mb-2 Add a new movie
   .subscriptionDetails
-    select(name="movies" style="width: 7em").d-block.mb-2
-      option(value="movie1") movie1
+    select(name="movies" data-role="movieSelect" style="width: 7em").d-block.mb-2
+      each movie in movies
+        option(value=movie._id) #{movie.name}
+          
       option(value="movie2dssasfdsafsd") movie2fasfdsasdfafsdsfd
       option(value="movie3") movie3
       option(value="movie4") movie4
-    input(type="date" id="start" name="movie-date" value="2018-07-22").d-block.mb-2
+    input(type="date" id="start" data-role="movieDate" value="2018-07-22").d-block.mb-2
       
 
   .btn-group
-    button.btn.btn-primary(style="margin-right: 1rem") Subscribe
-    button.btn.btn-outline-secondary Cancel
+    button.btn.btn-primary(style="margin-right: 1rem" data-role="createSubscription") Subscribe
+    button.btn.btn-outline-secondary(data-role="cancelSubscription") Cancel
