--- a/app/views/includes/members-nav.pug
+++ b/app/views/includes/members-nav.pug
@@ -2,4 +2,5 @@ ul.nav
   li.nav-item
     a(href="/members").nav-link All Members
   li.nav-item
-    a(href="/members/create").nav-link Add Member
+    - var disabled = authUser && (authUser.permissions.isAdmin || authUser.permissions.subscriptions.create) ? "":"disabled"
+    a(href="/members/create" class=disabled).nav-link Add Member
