--- a/app/views/movies.pug
+++ b/app/views/movies.pug
@@ -11,7 +11,7 @@ block content
   else
     .row
       each movie in movies
-        .col.col-6.d-flex.justify-content-center
+        .col.col-lg-6.col-md-12.d-flex.justify-content-center
           include ./includes/movie-card
           
 
