--- a/app/public/styles/_custom.scss
+++ b/app/public/styles/_custom.scss
@@ -7,3 +7,16 @@
 .mr-2 {
 	margin-right: 0.5rem;
 }
+
+.navbar.navbar-light .navbar-nav .nav-link {
+	&:hover {
+		color: #fff !important;
+	}
+}
+
+.nav-item:hover .nav-link {
+	&.disabled {
+		background-color: transparent;
+		cursor: none;
+	}
+}
