--- a/app/views/userForm.pug
+++ b/app/views/userForm.pug
@@ -16,43 +16,43 @@ block content
         label(for="lastName", class="form-label") Last Name
         input(type="text" name="lastName" value= (editedUser ? `${editedUser.lastName}`:'')).form-control#lastName
       .col-12
-        label(for="sessionTimeOut", class="form-label") Session Time Out
+        label(for="sessionTimeOut", class="form-label") Session Time Out (Min)
         input(type="text" name="sessionTimeOut" value= (editedUser ? `${editedUser.sessionTimeOut}`:'')).form-control#sessionTimeOut
       .col-12
         .row.g-3
           .col-6
             .form-check
-              input.form-check-input(type="checkbox" id="viewMovies" name="permissions" value="viewMovies" checked=(editedUser && editedUser.permissions["movies"]["view"]) ? 'checked':undefined)
+              input.form-check-input(type="checkbox" role="checkViewMovies" id="viewMovies" name="permissions" value="viewMovies" checked=(editedUser && editedUser.permissions["movies"]["view"]) ? 'checked':undefined)
               label.form-check-label(for="viewMovies")
                 | View Movies
           
             .form-check
-              input.form-check-input(type="checkbox" id="createMovies" name="permissions" value="createMovies" checked=(editedUser && editedUser.permissions["movies"]["create"]) ? 'checked':undefined)
+              input.form-check-input(type="checkbox" role="checkMovies" id="createMovies" name="permissions" value="createMovies" checked=(editedUser && editedUser.permissions["movies"]["create"]) ? 'checked':undefined)
               label.form-check-label(for="createMovies")
                 | Create Movies
             .form-check
-              input.form-check-input(type="checkbox" id="deleteMovies" name="permissions" value="deleteMovies" checked=(editedUser && editedUser.permissions["movies"]["delete"]) ? 'checked':undefined)
+              input.form-check-input(type="checkbox" role="checkMovies" id="deleteMovies" name="permissions" value="deleteMovies" checked=(editedUser && editedUser.permissions["movies"]["delete"]) ? 'checked':undefined)
               label.form-check-label(for="deleteMovies")
                 | Delete Movies
             .form-check
-              input.form-check-input(type="checkbox" id="updateMovies" name="permissions" value="updateMovies" checked=(editedUser && editedUser.permissions["movies"]["update"]) ? 'checked':undefined)
+              input.form-check-input(type="checkbox" role="checkMovies" id="updateMovies" name="permissions" value="updateMovies" checked=(editedUser && editedUser.permissions["movies"]["update"]) ? 'checked':undefined)
               label.form-check-label(for="updateMovies")
                 | Update Movies
           .col-6
             .form-check
-              input.form-check-input(type="checkbox" id="viewSubscriptions" name="permissions" value="viewSubscriptions" checked=(editedUser && editedUser.permissions["subscriptions"]["view"] ? 'checked':undefined))
+              input.form-check-input(type="checkbox" role="checkViewSubscriptions" id="viewSubscriptions" name="permissions" value="viewSubscriptions" checked=(editedUser && editedUser.permissions["subscriptions"]["view"] ? 'checked':undefined))
               label.form-check-label(for="viewSubscriptions")
                 | View Subscriptions
             .form-check
-              input.form-check-input(type="checkbox" id="createSubscriptions" name="permissions" value="createSubscriptions" checked=(editedUser && editedUser.permissions["subscriptions"]["create"] ? 'checked':undefined))
+              input.form-check-input(type="checkbox" role="checkSubscriptions" id="createSubscriptions" name="permissions" value="createSubscriptions" checked=(editedUser && editedUser.permissions["subscriptions"]["create"] ? 'checked':undefined))
               label.form-check-label(for="createSubscriptions")
                 | Create Subscriptions
             .form-check
-              input.form-check-input(type="checkbox" id="deleteSubscriptions" name="permissions" value="deleteSubscriptions" checked=(editedUser && editedUser.permissions["subscriptions"]["delete"] ? 'checked':undefined))
+              input.form-check-input(type="checkbox" role="checkSubscriptions" id="deleteSubscriptions" name="permissions" value="deleteSubscriptions" checked=(editedUser && editedUser.permissions["subscriptions"]["delete"] ? 'checked':undefined))
               label.form-check-label(for="deleteSubscriptions")
                 | Delete Subscriptions
             .form-check
-              input.form-check-input(type="checkbox" id="updateSubscriptions" name="permissions" value="updateSubscriptions" checked=(editedUser && editedUser.permissions ? 'checked':undefined))
+              input.form-check-input(type="checkbox" role="checkSubscriptions" id="updateSubscriptions" name="permissions" value="updateSubscriptions" checked=(editedUser && editedUser.permissions ? 'checked':undefined))
               label.form-check-label(for="updateSubscriptions")
                 | Update Subscriptions
 
