--- a/app/views/users.pug
+++ b/app/views/users.pug
@@ -8,16 +8,16 @@ block content
             a.btn.btn-primary(href="/users/create") Create
     .row.mb-4
         each currUser in users
-            .col-sm-12.col-md-4
-                .card.mb-4
-                    .card-body
-                        .card-title= `${currUser.firstName} ${currUser.lastName}`
-                        p.card-text Created: #{currUser.createdDate}
-                        p.card-text SessionTimeOut: #{currUser.sessionTimeOut} min
-                        p.card-text.card-text--permissions Permissions: #{currUser.permissions.toString()}
-                        .row.g-2
-                            .col-3
-                                a(href=`/users/${currUser.id}`).btn.btn-primary Edit
-                            .col-3
-                                button#deleteUser(userId = currUser.id  class= (authUser == currUser.id ? "disabled": "fffff")).btn.btn-primary 
-                                  | Delete
+          .col-sm-12.col-md-4
+              .card.mb-4
+                  .card-body
+                      .card-title= `${currUser.firstName} ${currUser.lastName}`
+                      p.card-text Created: #{currUser.createdDate}
+                      p.card-text SessionTimeOut: #{currUser.sessionTimeOut} min
+                      p.card-text.card-text--permissions.overflow-hidden Permissions: #{currUser.permissions.toString()}
+                      .row.g-2
+                          .col-3
+                              a(href=`/users/${currUser.id}`).btn.btn-primary Edit
+                          .col-3
+                              button#deleteUser(userId = currUser.id  class= (authUser == currUser.id ? "disabled": "fffff")).btn.btn-primary 
+                                | Delete
